--- a/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
@@ -475,8 +475,9 @@
     <string name="error_forbidden">您的账户出现问题，同步已关闭</string>
     <string name="error_not_acceptable">服务器状态异常，同步已关闭</string>
 
-    <string name="screen_on_proximity_sensor_summary">防误触模式下\n请确认屏幕顶端没有遮挡物</string>
-    <string name="screen_on_proximity_sensor_hint">强制退出：同时按下“返回键"+"音量加键”\n可在“系统设置-显示”页关闭防误触模式</string>
+    <string name="screen_on_proximity_sensor_title">防误触模式</string>
+    <string name="screen_on_proximity_sensor_summary">请勿遮挡屏幕顶端</string>
+    <string name="screen_on_proximity_sensor_hint">强制退出：同时按下“返回键”+“加音量键”</string>
 
     <string name="wake_alarm_message">"关机闹钟仍在%s提醒"</string>
     <string name="alarm_message_12_hour_formate">aah:mm</string>
