--- a/src/frameworks/miui/core/res/res/values/strings.xml
+++ b/src/frameworks/miui/core/res/res/values/strings.xml
@@ -589,8 +589,9 @@
     <string name="error_forbidden">You account met problems. Sync disabled.</string>
     <string name="error_not_acceptable">Server malfunctional. Sync disabled.</string>
 
-    <string name="screen_on_proximity_sensor_summary">Currently it\'s under misoperation prevent mode\nPlease make sure the top of screen isn\'t covered</string>
-    <string name="screen_on_proximity_sensor_hint">Force to quit: pressing \'Back\'+\'Volume Up\' key\nMisoperation prevent mode can be disabled under \'Settings - Display\'</string>
+    <string name="screen_on_proximity_sensor_title">Misoperation prevent mode</string>
+    <string name="screen_on_proximity_sensor_summary">Don\'t cover the top of screen</string>
+    <string name="screen_on_proximity_sensor_hint">Force to quit: pressing \'Back\'+\'Volume Up\' key</string>
 
     <string name="wake_alarm_message">"Shutdown alarm still rings at %s"</string>
     <string name="alarm_message_12_hour_formate">h:mm aa</string>
