--- a/src/packages/apps/Contacts/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Contacts/res/values-zh-rTW/strings.xml
@@ -29,7 +29,7 @@
     <string name="contactMultiPickerActivityTitle">"選擇聯絡人"</string>
     <string name="starredList" msgid="4817256136413959463">"已加星號的內容"</string>
     <string name="frequentList" msgid="7154768136473953056">"常用聯絡人"</string>
-    <string name="strequentList" msgid="5640192862059373511">"收藏"</string>
+    <string name="strequentList" msgid="5640192862059373511">"我的最愛"</string>
     <string name="viewContactTitle" msgid="7989394521836644384">"聯絡人詳情"</string>
     <string name="viewContactDesription" msgid="214186610887547860">"尋找聯絡人"</string>
     <string name="editContactDescription" msgid="2947202828256214947">"編輯聯絡人"</string>
@@ -42,8 +42,8 @@
     <string name="menu_newContact" msgid="1209922412763274638">"新增聯絡人"</string>
     <string name="menu_viewContact" msgid="2795575601596468581">"尋找聯絡人"</string>
     <string name="menu_callNumber" msgid="5142851348489387516">"撥接<xliff:g id="NAME">%s</xliff:g>"</string>
-    <string name="menu_addStar" msgid="2908478235715404876">"新增到收藏"</string>
-    <string name="menu_removeStar" msgid="5844227078364227030">"從收藏中移除"</string>
+    <string name="menu_addStar" msgid="2908478235715404876">"新增到我的最愛"</string>
+    <string name="menu_removeStar" msgid="5844227078364227030">"從我的最愛中移除"</string>
     <string name="menu_editContact" msgid="9042415603857662633">"修改"</string>
     <string name="menu_deleteContact" msgid="6788644058868189393">"刪除"</string>
     <string name="menu_call" msgid="3992595586042260618">"撥接聯絡人"</string>
@@ -53,7 +53,7 @@
     <string name="menu_deleteGroup" msgid="3486380004411482874">"刪除"</string>
     <string name="menu_new_contact_action_bar" msgid="8887818026717394343">"新增"</string>
     <string name="menu_new_group_action_bar" msgid="5055346725617932394">"新增群組"</string>
-    <string name="menu_new_favorite_action_bar">"新增收藏"</string>
+    <string name="menu_new_favorite_action_bar">"新增我的最愛"</string>
     <string name="splitConfirmation_title" msgid="2209511048593467012">"分割聯絡人"</string>
     <string name="splitConfirmation" msgid="1067993957986345974">"確定要將一位聯絡人分割成多位聯絡人？"</string>
     <string name="menu_joinAggregate" msgid="5027981918265667970">"合併"</string>
@@ -110,7 +110,7 @@
     <item quantity="one" msgid="3405747744700823280">"1 位聯絡人"</item>
     <item quantity="other" msgid="3578469907265375314">"<xliff:g id="COUNT">%d</xliff:g> 位聯絡人"</item>
   </plurals>
-    <string name="listTotalAllContactsZeroStarred" msgid="1289318488170099285">"目前沒有收藏的聯絡人"</string>
+    <string name="listTotalAllContactsZeroStarred" msgid="1289318488170099285">"目前沒有我的最愛聯絡人"</string>
   <plurals name="listFoundAllContacts">
     <item quantity="one" msgid="5517063038754171134">"找到 1 個聯絡人"</item>
     <item quantity="other" msgid="3852668542926965042">"找到 <xliff:g id="COUNT">%d</xliff:g> 個聯絡人"</item>
@@ -123,7 +123,7 @@
   </plurals>
     <string name="contactsAllLabel" msgid="6178225597569649305">"全部"</string>
     <string name="contactsGroupsLabel" msgid="2841971472518003524">"群組"</string>
-    <string name="contactsFavoritesLabel" msgid="8417039765586853670">"收藏"</string>
+    <string name="contactsFavoritesLabel" msgid="8417039765586853670">"我的最愛"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"通話記錄"</string>
     <string name="liveFolderAll" msgid="4789010460767506206">"所有聯絡人"</string>
     <string name="liveFolderFavorites" msgid="3100957542927222282">"已加星號的聯絡人"</string>
@@ -155,7 +155,7 @@
     <string name="noContactsNoSimHelpText" product="default" msgid="467658807711582876">"您沒有可顯示的聯絡人。"\n\n"要新增聯絡人，請按"<font fgcolor="#ffffffff"><b>"功能表"</b></font>"，然後輕觸："\n" "\n<li><font fgcolor="#ffffffff"><b>"Google 帳號"</b></font>"以新增或配置帳號，您可以將該帳號中包含的聯絡人同步到手機"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"新增聯絡人"</b></font>"從新建立新聯絡人"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"匯入/匯出"</b></font>"以匯入 SIM 卡或 SD 卡上的聯絡人"\n</li></string>
     <string name="noContactsNoSimHelpTextWithSync" product="tablet" msgid="6222739731808897565">"您沒有可顯示的聯絡人。（如果您剛剛新增了一個帳號，則需要幾分鐘時間同步聯絡人。）"\n\n"要新增聯絡人，請按"<font fgcolor="#ffffffff"><b>"功能表"</b></font>"，然後輕觸："\n" "\n<li><font fgcolor="#ffffffff"><b>"Google 帳號"</b></font>"以新增或配置帳號，您可以將該帳號中包含的聯絡人同步到平板電腦"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"選項"</b></font>"修改現有聯絡人"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"新增聯絡人"</b></font>"從新開始建立新聯絡人"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"匯入/匯出"</b></font>"以匯入 SD 卡上的聯絡人"\n</li></string>
     <string name="noContactsNoSimHelpTextWithSync" product="default" msgid="9040060730467973050">"您沒有可顯示的聯絡人。（如果您剛剛新增了一個帳號，則需要幾分鐘時間同步聯絡人。）"\n\n"要新增聯絡人，請按"<font fgcolor="#ffffffff"><b>"功能表"</b></font>"，然後輕觸："\n" "\n<li><font fgcolor="#ffffffff"><b>"Google 帳號"</b></font>"以新增或配置帳號，您可以將該帳號中包含的聯絡人同步到手機"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"選項"</b></font>"修改目前聯絡人"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"新增聯絡人"</b></font>"從新建立新聯絡人"\n</li>" "\n<li><font fgcolor="#ffffffff"><b>"匯入/匯出"</b></font>"以匯入 SD 卡上的聯絡人"\n</li></string>
-    <string name="noFavoritesHelpText" msgid="3744655776704833277">"您未收藏任何聯絡人。"\n\n"要向您的收藏清單新增聯絡人，請執行以下操作："\n\n"        "<li>"輕觸"<b>"聯絡人"</b>"書籤"\n</li>\n<li>"輕觸您要加入收藏的聯絡人"\n</li>\n<li>"輕觸聯絡人姓名旁邊的星號"\n</li></string>
+    <string name="noFavoritesHelpText" msgid="3744655776704833277">"您未有我的最愛聯繫人。"\n\n"要向您的我的最愛清單新增聯絡人，請執行以下操作："\n\n"        "<li>"輕觸"<b>"聯絡人"</b>"書籤"\n</li>\n<li>"輕觸您要加入我的最愛的聯絡人"\n</li>\n<li>"輕觸聯絡人姓名旁邊的星號"\n</li></string>
     <string name="liveFolder_all_label" msgid="5961411940473276616">"所有聯絡人"</string>
     <string name="liveFolder_favorites_label" msgid="2674341514070517105">"已加星號的內容"</string>
     <string name="liveFolder_phones_label" msgid="1709786878793436245">"電話"</string>
@@ -395,7 +395,7 @@
     <string name="group_edit_field_hint_text" msgid="3966441850870457808">"群組名稱"</string>
     <string name="contact_status_update_attribution" msgid="752179367353018597">"來源：<xliff:g id="SOURCE">%1$s</xliff:g>"</string>
     <string name="contact_status_update_attribution_with_date" msgid="7358045508107825068">"時間：<xliff:g id="DATE">%1$s</xliff:g>，來源：<xliff:g id="SOURCE">%2$s</xliff:g>"</string>
-    <string name="description_star" msgid="2605854427360036550">"收藏"</string>
+    <string name="description_star" msgid="2605854427360036550">"我的最愛"</string>
     <string name="edit_contact" msgid="7529281274005689512">"編輯聯絡人"</string>
   <plurals name="merge_info">
     <item quantity="one" msgid="148365587896371969">"未合併"</item>
@@ -634,13 +634,13 @@
 
     <!-- 電話號碼picker -->
     <string name="recent_contacts_label">最近</string>
-    <string name="pick_favorites_list_title">共有%1$d個收藏聯絡人號碼</string>
+    <string name="pick_favorites_list_title">共有%1$d個我的最愛聯絡人號碼</string>
     <string name="pick_recent_list_title">共有%1$d個最近聯絡人號碼</string>
     <string name="noRecentContacts">目前沒有最近聯絡人</string>
     <string name="hint_search_contacts">"搜尋%d位聯絡人"</string>
 
     <!-- Contacts Picker -->
-    <string name="pick_favorites_contacts_list_title">共有%1$d個收藏聯繫人</string>
+    <string name="pick_favorites_contacts_list_title">共有%1$d個我的最愛聯繫人</string>
     <string name="pick_recent_contacts_list_title">共有%1$d個最近聯繫人</string>
 
     <!-- 聯繫人設置 -->
