--- a/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
@@ -103,8 +103,8 @@
     <string name="picasa_posts" msgid="1497721615718760613">"帖子"</string>
     <string name="make_available_offline" msgid="5157950985488297112">"允许离线状态下使用"</string>
     <string name="sync_picasa_albums" msgid="8522572542111169872">"刷新"</string>
-    <string name="sd_explorer">"浏览SD卡"</string>
-    <string name="cloud_albums">在线云图册</string>
+    <string name="sd_explorer">"浏览存储设备"</string>
+    <string name="cloud_albums">云图册</string>
     <string name="home_my_captured_items">张我拍摄的照片</string>
     <string name="all_media">"全部图片"</string>
     <string name="done" msgid="217672440064436595">"完成"</string>
@@ -202,7 +202,7 @@
     <string name="failure_external_storage_not_writable">外部存储设备不可写，操作失败！</string>
     <string name="save_pic_error">保存图片失败！</string>
     <string name="save_pic_to_success">图片保存到\n%s</string>
-    <string name="save_to_sdcard">保存到SD卡</string>
+    <string name="save_to_sdcard">保存到存储设备</string>
     <string name="damaged_file">加载失败</string>
     <string name="must_pick_file">你必须先选择文件</string>
     <string name="play_video">播放视频</string>
@@ -265,13 +265,15 @@
     <string name="no_file">没有图片或视频文件</string>
     <string name="no_files">该文件夹没有文件</string>
     <string name="send">发送</string>
-    <string name="sd_not_available">无可用SD卡，请插入或连接SD卡</string>
+    <string name="sd_not_available">无存储设备，请插入或连接存储设备</string>
     <string name="confirm_know">知道了</string>
     <string name="image_property">图片属性</string>
     <string name="video_property">视频属性</string>
     <string name="cancel_bookmark">取消收藏</string>
     <string name="add_bookmark">收藏</string>
-    <string name="sd_folder">SD卡</string>
+    <string name="internal_sd_card">内置SD卡</string>
+    <string name="external_sd_card">SD卡</string>
+    <string name="external_usb_device">U盘</string>
     <string name="menu_item_sort">排序</string>
     <string name="menu_item_sort_name_asc">名称(升序)</string>
     <string name="menu_item_sort_name_desc">名称(降序)</string>
@@ -290,6 +292,7 @@
     <string name="how_many_videos">%d个视频</string>
     <string name="how_many_sub_folders">%d个子文件夹</string>
     <string name="how_many_pics">%d张照片</string>
+    <string name="how_many_volumes">%d个存储设备</string>
 
     <string name="file_info_title">标题:</string>
     <string name="file_info_path">路径:</string>
@@ -313,4 +316,6 @@
 
     <string name="error_should_not_select_image">说明：请不要选择图片文件。</string>
     <string name="error_should_not_select_video">说明：请不要选择视频文件。</string>
+
+    <string name="storage_all_volumes">所有存储设备</string>
 </resources>
