--- a/src/packages/apps/MiuiGallery/res/values/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values/strings.xml
@@ -249,7 +249,7 @@
     <!-- A label of a menu item for user to sync the content [CHAR LIMIT=30] -->
     <string name="sync_picasa_albums">Refresh</string>
 
-    <string name="sd_explorer">Explore storage card</string>
+    <string name="sd_explorer">Explore storage devices</string>
     <string name="cloud_albums">Cloud albums</string>
     <string name="home_my_captured_items">my captured photo(s)</string>
     <string name="all_media">"All photos"</string>
@@ -461,7 +461,7 @@
     <string name="failure_external_storage_not_writable">External storage is not writable!</string>
     <string name="save_pic_error">Failed to save picture!</string>
     <string name="save_pic_to_success">Picture is successfully saved to\n%s</string>
-    <string name="save_to_sdcard">Save to SD card</string>
+    <string name="save_to_sdcard">Save to storage device</string>
     <string name="damaged_file">File is corrupted</string>
     <string name="camera_folder_display_name">Camera Photos</string>
     <string name="miui_capture_screen_folder_display_name">Screenshots</string>
@@ -522,13 +522,15 @@
     <string name="no_file">No files found</string>
     <string name="no_files">Folder is empty</string>
     <string name="send">Send</string>
-    <string name="sd_not_available">SD card unmounted or unavailable</string>
+    <string name="sd_not_available">No available storage device.</string>
     <string name="confirm_know">OK</string>
     <string name="image_property">Photo properties</string>
     <string name="video_property">Video properties</string>
     <string name="cancel_bookmark">Remove from Favorites</string>
     <string name="add_bookmark">Add to Favorites</string>
-    <string name="sd_folder">SD card folder</string>
+    <string name="internal_sd_card">Internal SD card</string>
+    <string name="external_sd_card">SD card</string>
+    <string name="external_usb_device">USB device</string>
     <string name="menu_item_sort">Sort</string>
     <string name="menu_item_sort_name_asc">By name (A-Z)</string>
     <string name="menu_item_sort_name_desc">By name (Z-A)</string>
@@ -547,6 +549,7 @@
     <string name="how_many_videos">%d Videos</string>
     <string name="how_many_sub_folders">%d Folders</string>
     <string name="how_many_pics">%d Photos</string>
+    <string name="how_many_volumes">%d storage devices</string>
 
     <string name="file_info_title">Title:</string>
     <string name="file_info_path">Path:</string>
@@ -571,4 +574,5 @@
     <string name="error_should_not_select_image">Warning: please do not select an image file.</string>
     <string name="error_should_not_select_video">Warning: please do not select a video file.</string>
 
+    <string name="storage_all_volumes">All storage devices</string>
 </resources>
