--- a/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
@@ -213,6 +213,7 @@
     <string name="vibrate_category_title">震動</string>
     <string name="vibrate_in_silent_title">靜音時震動</string>
     <string name="vibrate_in_normal_title">不靜音時震動</string>
+    <string name="silent_mode_title">靜音模式</string>
 
 <!-- Broadcom, WAPI -->
     <string name="wifi_wapi_fail_to_init">打開 WAPI 證書失敗，憑證可能不可用</string>
