--- a/src/packages/apps/Notes/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Notes/res/values-zh-rCN/strings.xml
@@ -18,7 +18,7 @@
     <string name="note_link_other">打开地图</string>
     <string name="note_link_select">选择文字</string>
     <!-- note list string -->
-    <string name="menu_create_folder">新建文件夹</string>
+    <string name="menu_create_folder">新建便签夹</string>
     <string name="menu_export_text">导出文本</string>
     <string name="menu_list_mode">列表视图</string>
     <string name="menu_grid_mode">网格视图</string>
@@ -26,7 +26,7 @@
     <string name="menu_setting">设置</string>
     <string name="menu_search">搜索</string>
     <string name="menu_delete">删除</string>
-    <string name="menu_move">移动到文件夹</string>
+    <string name="menu_move">移动到便签夹</string>
     <string name="menu_select_title">选中了 %d 项</string>
     <string name="menu_select_none">没有选中项，操作无效</string>
     <string name="menu_select_all">全选</string>
@@ -36,18 +36,18 @@
     <string name="menu_font_normal">正常</string>
     <string name="menu_font_large">大</string>
     <string name="menu_font_super">超大</string>
-    <string name="menu_folder_change_name">修改文件夹名称</string>
-    <string name="folder_exist">文件夹 %1$s 已存在，请重新命名</string>
+    <string name="menu_folder_change_name">修改便签夹名称</string>
+    <string name="folder_exist">便签夹 %1$s 已存在，请重新命名</string>
     <string name="menu_share">分享</string>
     <string name="menu_send_to_desktop">发送到桌面</string>
-    <string name="menu_title_select_folder">选择文件夹</string>
-    <string name="menu_move_parent_folder">上一级文件夹</string>
+    <string name="menu_title_select_folder">选择便签夹</string>
+    <string name="menu_move_parent_folder">上一级便签夹</string>
     <string name="info_note_enter_desktop">已添加到桌面</string>
     <string name="alert_title_delete">删除</string>
     <string name="alert_message_delete_notes">确认要删除所选的 %d 条便签吗?</string>
     <string name="alert_message_delete_note">确认要删除该条便签吗?</string>
-    <string name="alert_message_delete_folder">确认删除文件夹及所包含的便签吗？</string>
-    <string name="format_move_notes_to_folder">已将所选 %1$d 条便签移到 %2$s 文件夹</string>
+    <string name="alert_message_delete_folder">确认删除便签夹及所包含的便签吗？</string>
+    <string name="format_move_notes_to_folder">已将所选 %1$d 条便签移到 %2$s 便签夹</string>
     <!-- export text -->
     <string name="error_sdcard_unmounted">SD卡被占用，不能操作</string>
     <string name="error_sdcard_export">导出文本时发生错误，请检查SD卡</string>
@@ -100,7 +100,7 @@
 
     <string name="button_new_note">新建便签</string>
     <string name="default_folder_name">便签夹</string>
-    <string name="move_to_parent">移到上级目录</string>
+    <string name="move_to_parent">移到上一级便签夹</string>
 
     <string name="attachment_gallery">图片</string>
     <string name="attachment_camera">拍照</string>
