--- a/src/packages/apps/Weather/res/values/strings.xml
+++ b/src/packages/apps/Weather/res/values/strings.xml
@@ -2,97 +2,98 @@
 <resources>
     <string name="app_name">Weather</string>
 
-    <string name="app_about_1">v4.0.9</string>
+    <string name="app_about_1">v4.0.10</string>
     <string name="app_about_2">Copyright © 2012 miui.com, All Rights Reserved</string>
 
-    <string name="weather_notification">weather notification</string>
-    <string name="location_notification">location notification</string>
-    <string name="enable_notification">Open location notification</string>
-    <string name="enable_notification_summary">the unexpected weather such as rain,snow and temperature drop happened, will send system notification.</string>
-    <string name="enable_notification_city">Have opened %s weather notification, the unexpected weather such as rain,snow and temperature drop happened, will send system notification.</string>
+    <string name="weather_notification">Weather Notification</string>
+    <string name="location_notification">Location Notification</string>
+    <string name="enable_notification">Open Location Notification</string>
+    <string name="enable_notification_summary">Send system notification when unexpected weather such as rain, snow and temperature change happens.</string>
+    <string name="enable_notification_city">Have opened %s weather notification, system notification will be sent when unexpected weather such as rain,snow and temperature change happens.</string>
 
-    <string name="sms_notification">sms notification</string>
+    <string name="sms_notification">SMS notification</string>
     <string name="send_sms_notification">Forwarding weather notification</string>
-    <string name="send_sms_notification_summary">send today weather data to your friends and family by sms.</string>
+    <string name="send_sms_notification_summary">Send today\'s weather data to your friends and family via SMS.</string>
 
 
-    <string name="location_management">location management</string>
-    <string name="enable_gps">locating local position</string>
-    <string name="add_city">add city</string>
-    <string name="cancel">cancel</string>
-    <string name="menu_send_sms">send</string>
+    <string name="location_management">Location Management</string>
+    <string name="enable_gps">Locating position</string>
+    <string name="add_city">Add City</string>
+    <string name="cancel">Cancel</string>
+    <string name="menu_send_sms">Send</string>
 
 
-    <string name="app_love_sms_title">sms content</string>
-    <string name="app_love_view_title">preview</string>
+    <string name="app_love_sms_title">SMS Content</string>
+    <string name="app_love_view_title">Preview</string>
     <string name="app_love_font_lng">%s</string>
 
-    <string name="app_nohave_net">No network connection, please check the network</string>
-    <string name="app_unquiet_net">Network instability, please try again later</string>
+    <string name="app_nohave_net">No network connection, please check network</string>
+    <string name="app_unquiet_net">Network instable. Please try again later</string>
+    <string name="app_no_sktq">No data</string>
 
     <string name="widget_loading">No weather data</string>
 
-    <string name="act_find_city_hot_title">Hot city</string>
-    <string name="act_find_city_title">add city</string>
+    <string name="act_find_city_hot_title">Popular Cities</string>
+    <string name="act_find_city_title">Add City</string>
     <string name="act_find_city_null_data">no city that you want to query</string>
-    <string name="act_find_city_hint">Search 2400 cities(Chinese / Pinyin)</string>
+    <string name="act_find_city_hint">Search 2,400 China Cities(Chinese/Pinyin)</string>
 
-    <string name="act_set_city_find_side_on">Open location</string>
-    <string name="act_set_city_find_side">locating...</string>
-    <string name="local_city">local city</string>
-    <string name="act_set_city_re_find_side">relocating...</string>
-    <string name="act_set_city_find_side_error">location failed</string>
-    <string name="act_city_find_gps_error">location failed, please select to add city</string>
+    <string name="act_set_city_find_side_on">Open Location</string>
+    <string name="act_set_city_find_side">Locating...</string>
+    <string name="local_city">Local Cities</string>
+    <string name="act_set_city_re_find_side">Relocating...</string>
+    <string name="act_set_city_find_side_error">Locating failed</string>
+    <string name="act_city_find_gps_error">Locating failed. Please select city manually.</string>
     <string name="act_weather_main_data_null">No weather data, click to refresh</string>
 
-    <string name="act_weather_cycle_update">updating...</string>
+    <string name="act_weather_cycle_update">Updating...</string>
     <string name="act_weather_update_time">%s Published</string>
 
-    <string name="act_weather_range_title">surrounding weather</string>
-    <string name="act_weather_range_select">please select a city</string>
+    <string name="act_weather_range_title">Surrounding Weather Forecast</string>
+    <string name="act_weather_range_select">Please select a city</string>
 
     <string name="menu_reload">Refresh</string>
     <string name="menu_share">Share</string>
     <string name="menu_chart">Chart</string>
     <string name="menu_about">About</string>
 
-    <string name="share_weather_title">Share weather data</string>
-    <string name="share_sina">Share it via Sina weibo</string>
-    <string name="share_qq">Share it via Tencent weibo</string>
-    <string name="install_sina">Click to install Sina weibo</string>
-    <string name="install_tencent">Click to install Tencent weibo</string>
+    <string name="share_weather_title">Share Weather Data</string>
+    <string name="share_sina">Share it via Sina Weibo</string>
+    <string name="share_qq">Share it via Tencent Weibo</string>
+    <string name="install_sina">Click to install Sina Weibo</string>
+    <string name="install_tencent">Click to install Tencent Weibo</string>
 
-    <string name="chart_weather_title">Weather chart</string>
+    <string name="chart_weather_title">Weather Chart</string>
 
     <string name="share_content">#MIUI weather#\nToday %1$s\'s weather is %2$s, %3$s, %4$s。%5$s published.</string>
-    <string name="save_screen_shot_failed">save screen shot failed</string>
+    <string name="save_screen_shot_failed">Failed to save screenshot</string>
 
-    <string name="menu_delete">delete</string>
-    <string name="selected_format">Have selected %d city</string>
-    <string name="alert_title_delete">delete</string>
+    <string name="menu_delete">Delete</string>
+    <string name="selected_format">Selected %d city</string>
+    <string name="alert_title_delete">Delete</string>
     <string name="alert_message_delete">Confirm to delete the selected %d city?</string>
 
     <string name="send_weather_sms_cycle">%1$s future weather：%2$s</string>
     <string name="send_weather_sms_main">%1$s %2$s,%3$s %4$s %5$s</string>
-    <string name="send_weather_sms_error">no weather data</string>
+    <string name="send_weather_sms_error">No weather data</string>
 
     <string name="tip_weather">MIUI Weather Notification</string>
-    <string name="tip_weather_info_title_1">%1$s is expected temperature difference between day and night %2$d degrees</string>
-    <string name="tip_weather_info_content_1">Go out to pay attention to subtract the clothes.</string>
-    <string name="tip_weather_info_title_2">%1$s today is estimated to %2$s</string>
+    <string name="tip_weather_info_title_1">%1$s expected temperature difference of %2$d degrees</string>
+    <string name="tip_weather_info_content_1">When going outdoors, please wear appropiate clothing.</string>
+    <string name="tip_weather_info_title_2">%1$s temperature today is estimated to be %2$s</string>
 
-    <string name="alert_provider_title">location notification</string>
-    <string name="alert_provider_message">In order to detect position, will enable wireless network locating. Will enter the location services interface, please open network based location services.</string>
-    <string name="button_allow">OK</string>
-    <string name="button_not_allow">Cancel</string>
+    <string name="alert_provider_title">Location Notification</string>
+    <string name="alert_provider_message">In order to detect your position, you will need to enable wireless network locating function. Agreeing will bring you to the Location Services interface. Please open Network Based Location Services.</string>
+    <string name="button_allow">Agree</string>
+    <string name="button_not_allow">Disagree</string>
     <string name="location_allow_err">Open location failed</string>
 
     <string name="format_date_wmd">M/d EEE</string>
     <string name="format_date_md">M/d kk:mm</string>
 
     <array name="send_item">
-        <item>sms</item>
-        <item>mail</item>
+        <item>SMS</item>
+        <item>Email</item>
     </array>
 
     <array name="act_weather_main_listview_json_key">
