--- a/src/packages/apps/MiuiBrowser/res/values/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values/strings.xml
@@ -6,51 +6,51 @@
     <string name="local_bookmarks">Xiaomi</string>
     <string name="google_bookmarks">"Google: "</string>
     <string name="bookmarks_management">Bookmarks</string>
-    <string name="bookmarks_root_folder">Root folder</string>
+    <string name="bookmarks_root_folder">Root Folder</string>
 
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="multi_select_title" >Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
-    <string name="delete_multi_bookmarks_alert_title" >Are you sure to delete these <xliff:g id="number">%1$s</xliff:g> items?</string>
+    <string name="delete_multi_bookmarks_alert_title" >Are you sure you want to delete these <xliff:g id="number">%1$s</xliff:g> items?</string>
 
-    <string name="add_bookmark">Add bookmark</string>
-    <string name="add_bookmark_to_home_screen">Add to home screen</string>
-    <string name="add_bookmark">Add bookmark</string>
+    <string name="add_bookmark">Add Bookmark</string>
+    <string name="add_bookmark_to_home_screen">Add to Home Screen</string>
+    <string name="add_bookmark">Add Bookmark</string>
     <string name="bookmark_title">Label</string>
     <string name="bookmark_url">Url</string>
-    <string name="bookmark_add_to">Add to</string>
-    <string name="add_folder">Add folder</string>
-    <string name="folder_name">Folder name</string>
+    <string name="bookmark_add_to">Add To</string>
+    <string name="add_folder">Add Folder</string>
+    <string name="folder_name">Folder Name</string>
 
-    <string name="bookmark_this_page_to_readmodelist">"Add this page to ReadingList bookmark"</string>
-    <string name="readmodelist_bookmarks_to_show">"ReadingList"</string>
-    <string name="bookmark_to_readmodelist_saved">"Saved to ReadingList bookmark and covered original bookmark."</string>
-    <string name="bookmark_to_readmodelist_not_saved">"Couldn\'t save ReadingList bookmark."</string>
+    <string name="bookmark_this_page_to_readmodelist">"Add this page to Reading List bookmark"</string>
+    <string name="readmodelist_bookmarks_to_show">"Reading List"</string>
+    <string name="bookmark_to_readmodelist_saved">"Saved to Reading List bookmark and covered original bookmark."</string>
+    <string name="bookmark_to_readmodelist_not_saved">"Couldn\'t save Reading List bookmark."</string>
     <string name="readmode_reach_last_page">"Has reached the last page"</string>
 
-    <string name="share_link">Share link</string>
-    <string name="open_all_bookmarks">Open all</string>
-    <string name="move_to_up_folder">move to up level</string>
+    <string name="share_link">Share Link</string>
+    <string name="open_all_bookmarks">Open All</string>
+    <string name="move_to_up_folder">Go Back One Folder</string>
 
     <!-- Name of tab containing yellow page sites -->
-    <string name="tab_yellowpage">Yellow page</string>
+    <string name="tab_yellowpage">Yellow Pages</string>
 
     <!-- Name of tab containing quick link sites -->
-    <string name="tab_quicklinks">Quick links</string>
+    <string name="tab_quicklinks">Quick Links</string>
 
     <!-- Settings label -->
     <string name="pref_content_night_read_mode">Enable Night Mode</string>
 
     <string-array name="pref_homepage_choices">
         <!-- Setting choice to set the homepage to the current page [CHAR LIMIT=40] -->
-        <item>Current page</item>
+        <item>Current Page</item>
         <item>MIUI home</item>item>
         <!-- Setting choice to set the homepage to a blank page [CHAR LIMIT=40] -->
-        <item>Blank page</item>
+        <item>Blank Page</item>
         <!-- Setting choice to set the homepage to the default page [CHAR LIMIT=40] -->
-        <item>Default page</item>
+        <item>Default Page</item>
         <!-- Setting choice to set the homepage to the "Most Visited" homepage feature, which is a list of most visited sites [CHAR LIMIT=40] -->
-        <item>Most visited sites</item>
+        <item>Most Visited Sites</item>
         <!-- Setting choice to set the homepage to a user entered URL [CHAR LIMIT=40] -->
         <item>Other</item>
     </string-array>
@@ -64,9 +64,9 @@
     </string-array>
 
     <!-- Checkbox setting for enabling/disabling the ExitOnClosingLastTab feature [CHAR-LIMIT=32] -->
-    <string name="pref_exit_on_closing_last_tab_enabled_title">Exit on closing last tab</string>
+    <string name="pref_exit_on_closing_last_tab_enabled_title">Exit on Closing Last Tab</string>
     <!-- Settings summary for the ExitOnClosingLastTab feature. [CHAR-LIMIT=none] -->
-    <string name="pref_exit_on_closing_last_tab_enabled_summary">Check this to exit browser on closing last tab in navigation screen. Uncheck to show homepage</string>
+    <string name="pref_exit_on_closing_last_tab_enabled_summary">Exit browser when closing last tab in navigation screen. Uncheck to show browser homepage</string>
 
     <string name="url_hint">Search or type URL</string>
     <string name="search_hint">Search</string>
@@ -88,27 +88,27 @@
         <item>http://3g.163.com/</item>
     </string-array>
 
-    <string name="file_picker_new_folder">New folder</string>
-    <string name="file_picker_sdcard_not_found">SD card not detected, please check if the device is currently mounted or in use</string>
+    <string name="file_picker_new_folder">New Folder</string>
+    <string name="file_picker_sdcard_not_found">SD card not detected. Please check if the device is currently mounted or in use</string>
     <string name="export_bookmark_sucess">Successfully exported bookmarks to SD card!</string>
     <string name="export_bookmark_failure">Failed to export bookmarks to SD card!</string>
     <string name="import_bookmark_sucess">Bookmarks imported successfully</string>
-    <string name="import_bookmark_failure">Bookmarks FAILED To Import!</string>
+    <string name="import_bookmark_failure">Bookmarks failed to import!</string>
     <string name="importing_favorite_files">Importing Data ...</string>
     <string name="please_select_a_file_to_import">Please select the data file</string>
-    <string name="exported_bookmark_file_name">My favorites</string>
-    <string name="import_bookmark">Import bookmarks</string>
-    <string name="export_bookmark">Export bookmarks</string>
+    <string name="exported_bookmark_file_name">My Favorites</string>
+    <string name="import_bookmark">Import Bookmarks</string>
+    <string name="export_bookmark">Export Bookmarks</string>
 
     <string name="miui_yellowpage_category">Category</string>
     <string name="miui_yellowpage_site">Site</string>
 
     <string name="accessibility_button_goto">Go</string>
 
-    <string name="contextmenu_download_image_as">Save image as</string>
+    <string name="contextmenu_download_image_as">Save Image As</string>
 
-    <string name="pref_ua_title">User agent management</string>
-    <string name="pref_ua_string">User agent string</string>
+    <string name="pref_ua_title">User Agent Management</string>
+    <string name="pref_ua_string">User Agent String</string>
     <string-array name="pref_ua_choices">
         <item>Android</item>
         <item>Desktop</item>
@@ -140,11 +140,11 @@
     <string name="add_xiaomi_account_warning">Please login Xiaomi account first</string>
     <string name="report_reading_mode_issue">Report reading mode issue to MIUI</string>
 
-    <string name="pref_key_gesture_title">Key and gesture</string>
+    <string name="pref_key_gesture_title">Keys and Gesture</string>
     <!-- 按键设置 -->
-    <string name="pref_key_title">Key settings</string>
-    <string name="pref_volume_key_enabled">Volume keys</string>
-    <string name="pref_volume_key_operation">Operation for volume keys</string>
+    <string name="pref_key_title">Key Settings</string>
+    <string name="pref_volume_key_enabled">Volume Keys</string>
+    <string name="pref_volume_key_operation">Operation for Volume Keys</string>
     <string-array name="pref_volume_key_choices">
         <item>Page up/down</item>
         <item>Switch tab</item>
@@ -154,9 +154,9 @@
         <item>1</item>
     </string-array>
     <!-- 手势操作 -->
-    <string name="pref_gesture_title">Gesture operations</string>
-    <string name="pref_fling_on_border_enabled">Fling on border</string>
-    <string name="pref_fling_on_border_operation">Operation for fling on border</string>
+    <string name="pref_gesture_title">Gesture</string>
+    <string name="pref_fling_on_border_enabled">Fling on Border</string>
+    <string name="pref_fling_on_border_operation">Operation for Fling on Border</string>
     <string-array name="pref_fling_on_border_choices">
         <item>Page forward/backward</item>
         <item>Switch tab</item>
@@ -180,17 +180,17 @@
     <!-- Confirmation dialog message confirming to exit browser -->
     <string name="exit_browser_warning">Exit browser?</string>
     <string name="not_remind_again">Do not remind me any more</string>
-    <string name="pref_general_exit_setting_title">Exit settings</string>
-    <string name="pref_confirm_for_exit">Confirm for exit</string>
-    <string name="pref_clear_cache_for_exit">Clear cache for exit</string>
-    <string name="pref_clear_history_for_exit">Clear history for exit</string>
+    <string name="pref_general_exit_setting_title">Exit Settings</string>
+    <string name="pref_confirm_for_exit">Confirm for Exit</string>
+    <string name="pref_clear_cache_for_exit">Clear Cache upon Exit</string>
+    <string name="pref_clear_history_for_exit">Clear History upon Exit</string>
 
-    <string name="recover_from_crash">Continue with last time</string>
+    <string name="recover_from_crash">Reopen last session</string>
     <string name="recover">Recover</string>
-    <string name="crash_recovcery_message">Browser quited improperly last time. Do you want to recover last time browsering?</string>
+    <string name="crash_recovcery_message">Browser quited unexpectedly last time. Do you want to reopen last session?</string>
 
-    <string name="menu_enable_night_mode">Enable night mode</string>
-    <string name="menu_disable_night_mode">Disable night mode</string>
+    <string name="menu_enable_night_mode">Enable Night Mode</string>
+    <string name="menu_disable_night_mode">Disable Night Mode</string>
 
     <!-- Toast informing tab has been opened in background. [CHAR LIMIT=50] -->
     <string name="tab_opened_background">Tab opened in background.</string>
