--- a/src/packages/apps/MiuiHome/res/values/strings.xml
+++ b/src/packages/apps/MiuiHome/res/values/strings.xml
@@ -32,9 +32,9 @@
     <!-- Name for all applications running as this uid. -->
     <!-- Default folder name -->
     <string name="folder_name">Folder</string>
-    <string name="unnamed_folder_name">Unnamed folder</string>
+    <string name="unnamed_folder_name">Unnamed Folder</string>
     <!-- Title of dialog that appears after user selects Wallpaper from menu -->
-    <string name="chooser_wallpaper">Select wallpaper from</string>
+    <string name="chooser_wallpaper">Select wallpaper From</string>
     <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
     <!-- Option in "Select wallpaper from" dialog box -->
     <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
@@ -52,12 +52,12 @@
     <!-- Shortcuts -->
     <skip />
     <!-- Title of dialog box -->
-    <string name="menu_item_add_item">Add to Home screen</string>
+    <string name="menu_item_add_item">Add to Home Screen</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
     <string name="group_shortcuts">Shortcuts</string>
     <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
-    <string name="group_folder">New folder</string>
+    <string name="group_folder">New Folder</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
     <string name="group_live_folders">Folders</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
@@ -66,15 +66,15 @@
     <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
     <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
     <!-- Error message when user has filled a home screen, possibly not used -->
-    <string name="out_of_space">No more room on this Home screen.</string>
+    <string name="out_of_space">No space on this Home Screen.</string>
     <!-- Message displayed when a shortcut is created by an external application -->
     <!-- Message displayed when a shortcut is uninstalled by an external application -->
     <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
 
     <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
-    <string name="title_select_shortcut">Select shortcut</string>
+    <string name="title_select_shortcut">Select Shortcut</string>
     <!-- Title of dialog when user is selecting live folder to add to homescreen -->
-    <string name="title_select_live_folder">Select folder</string>
+    <string name="title_select_live_folder">Select Folder</string>
 
     <!-- All applications label for accessibilty (spoken when the button gets focus). -->
     <!-- Label for button in all applications label to go back home (to the workspace / desktop)
@@ -90,37 +90,37 @@
     <string name="menu_search">Search</string>
     <!-- Noun, menu item used to bring down the notifications shade -->
     <string name="menu_workspace_preview">Preview</string>
-    <string name="menu_back_desktop">Back to home</string>
+    <string name="menu_back_desktop">Back to Home</string>
     <!-- Noun, menu item used to show the gestures settings -->
     <!-- Noun, menu item used to show the system settings -->
     <string name="menu_settings">Settings</string>
-    <string name="menu_reset_scene">Reset to default scene</string>
-    <string name="menu_exit_scene">Exit Free Desktop</string>
+    <string name="menu_reset_scene">Reset to Default Scene</string>
+    <string name="menu_exit_scene">Exit Free Launcher</string>
 
     <!-- Permissions: -->
     <skip />
     <!-- Permission short label -->
-    <string name="permlab_install_shortcut">install shortcuts</string>
+    <string name="permlab_install_shortcut">Install Shortcuts</string>
     <!-- Permission description -->
     <string name="permdesc_install_shortcut">Allows an application to add
         shortcuts without user intervention.</string>
     <!-- Permission short label -->
-    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
+    <string name="permlab_uninstall_shortcut">Uninstall Shortcuts</string>
     <!-- Permission description -->
     <string name="permdesc_uninstall_shortcut">Allows an application to remove
         shortcuts without user intervention.</string>
     <!-- Permission short label -->
-    <string name="permlab_install_widget">install widgets</string>
+    <string name="permlab_install_widget">Install Widgets</string>
     <!-- Permission description -->
     <string name="permdesc_install_widget">Allows an application to add
         widgets without user intervention.</string>
     <!-- Permission short label -->
-    <string name="permlab_read_settings">read Home settings and shortcuts</string>
+    <string name="permlab_read_settings">Read Home Settings and Shortcuts</string>
     <!-- Permission description -->
     <string name="permdesc_read_settings">Allows an application to read the settings and
         shortcuts in Home.</string>
     <!-- Permission short label -->
-    <string name="permlab_write_settings">write Home settings and shortcuts</string>
+    <string name="permlab_write_settings">Edit Home Settings and Shortcuts</string>
     <!-- Permission description -->
     <string name="permdesc_write_settings">Allows an application to change the settings and
         shortcuts in Home.</string>
@@ -129,32 +129,32 @@
     <skip />
 
     <!-- ADD BY LIBRA -->
-    <string name="start_activity_failed">Failed to start, please try again</string>
+    <string name="start_activity_failed">Failed to start. Please try again</string>
     <string name="gadget_error_text">Problem loading widget</string>
-    <string name="menu_edit">Edit widgets</string>
-    <string name="menu_sort">Sort home screen icons</string>
-    <string name="menu_launcher_setting">Launcher settings</string>
-    <string name="editing_tips">Add or edit widget</string>
+    <string name="menu_edit">Edit Widgets</string>
+    <string name="menu_sort">Sort Home Screen Icons</string>
+    <string name="menu_launcher_setting">Launcher Settings</string>
+    <string name="editing_tips">Add or Edit Widget</string>
     <string name="cant_remove_system_app">Unable to remove system application</string>
     <string name="cant_remove_retained_app">Unable to uninstall application customized by the operator</string>
-    <string name="uninstall_body_format">Remove application \"%s\"?</string>
+    <string name="uninstall_body_format">Remove Application \"%s\"?</string>
     <string name="uninstall">Uninstall</string>
     <string name="starting_preset_app">Starting</string>
     <string name="install">Install</string>
-    <string name="cant_remove_folder">Unable to remove non-empty folder</string>
-    <string name="failed_to_drop">Moving failed</string>
-    <string name="failed_to_drop_widget_nospace">Failed to move, not enough space!</string>
+    <string name="cant_remove_folder">Unable to remove unempty folder</string>
+    <string name="failed_to_drop">Move failed</string>
+    <string name="failed_to_drop_widget_nospace">Failed to move. Not enough space!</string>
     <string name="failed_to_drop_widget_invalid">Widget invalid</string>
-    <string name="failed_to_delete_temporary">Failed to delete, please try again.</string>
+    <string name="failed_to_delete_temporary">Failed to delete. Please try again.</string>
     <string name="widget_favorite_contacts_label">Favorite contacts</string>
     <string name="widget_favorite_contacts_edit">Editor</string>
-    <string name="widget_favorite_contacts_style">Switch size</string>
-    <string name="edit_folder_title">"Modify folder title"</string>
+    <string name="widget_favorite_contacts_style">Switch Size</string>
+    <string name="edit_folder_title">"Edit Folder Name"</string>
     <string name="confirm_btn_label">"OK"</string>
     <string name="cancel_btn_label">"Cancel"</string>
-    <string name="sort_by_not_defined">Sort by default</string>
-    <string name="sort_by_frequency">Sort by usage</string>
-    <string name="sort_by_abc">Sort by name</string>
+    <string name="sort_by_not_defined">Sort by Default</string>
+    <string name="sort_by_frequency">Sort by Usage</string>
+    <string name="sort_by_abc">Sort by Name</string>
     <string name="encryption">Encryption</string>
     <string name="default_folder_title_tools">Tools</string>
     <string name="default_folder_title_recommend">Recommend</string>
@@ -164,26 +164,26 @@
     <string name="reset_scene_prompt">The scene will be reset to default layout</string>
 
     <string name="preferences_title">Launcher Settings</string>
-    <string name="preferences_general_title">General settings</string>
-    <string name="pref_keep_in_memory_title">Keep in memory</string>
-    <string name="pref_keep_in_memory_summary">Keeps launcher from exiting in low memory.</string>
-    <string name="pref_render_in_truecolor_title">High quality graphics</string>
+    <string name="preferences_general_title">General Settings</string>
+    <string name="pref_keep_in_memory_title">Keep in Memory</string>
+    <string name="pref_keep_in_memory_summary">Keep launcher running when memory is low.</string>
+    <string name="pref_render_in_truecolor_title">High Quality Graphics</string>
     <string name="pref_render_in_truecolor_summary">Turning off this option will improve drawing performance.</string>
     <string name="pref_enable_drawing_cache_title">Drawing Cache</string>
-    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory, will cause some lag</string>
-    <string name="pref_icon_shadow_title">Icon shadow</string>
-    <string name="pref_icon_shadow_summary">Turn on/off the shadow on home screen icons.</string>
-    <string name="pref_screen_transformation_type_title">Transition effects</string>
+    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory. Will cause some lag.</string>
+    <string name="pref_icon_shadow_title">Icon Shadow</string>
+    <string name="pref_icon_shadow_summary">Turn on or off the shadows on the Home Screen icons.</string>
+    <string name="pref_screen_transformation_type_title">Transitional Effects</string>
     <string name="transformation_type_classic">Classic</string>
-    <string name="transformation_type_classic_no_overshoot">Classic (No overshoot)</string>
+    <string name="transformation_type_classic_no_overshoot">Classic (No Overshoot)</string>
     <string name="transformation_type_crossfade">Crossfade</string>
-    <string name="transformation_type_falldown">Falldown</string>
+    <string name="transformation_type_falldown">Tumbling</string>
     <string name="transformation_type_cube">3D Cube</string>
     <string name="transformation_type_leftpage">Page</string>
     <string name="transformation_type_stack">Cascading</string>
     <string name="transformation_type_rotate">Rotation</string>
-    <string name="pref_wallpaper_scroll_type_title">Wallpaper scroll types</string>
-    <string name="pref_cell_layout_size">Cell layout type</string>
+    <string name="pref_wallpaper_scroll_type_title">Wallpaper Scroll Types</string>
+    <string name="pref_cell_layout_size">Cell Layout Type</string>
 
     <string name="widget_gadget_player">Music</string>
     <string name="buffering">Buffering...</string>
@@ -205,7 +205,7 @@
 
     <string name="invalid_contact_shortcut">Invalid contact shortcut</string>
 
-    <string name="guide_tips_editing_mode">Hold the widget below to drag it onto the screen</string>
+    <string name="guide_tips_editing_mode">Hold widget below to drag it onto the screen</string>
 
     <!-- Do not translate. Duration format for duration < 1 hour -->
     <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$2d:%5$02d</xliff:g></string>
@@ -215,7 +215,7 @@
     <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
 
     <!-- Adjust photo -->
-    <string name="photo_adjust">Edit photo</string>
+    <string name="photo_adjust">Edit Photo</string>
     <string name="select_photo">Photo</string>
     <string name="select_frame">Frame</string>
     <string name="photo_confirm">Confirm</string>
@@ -228,16 +228,15 @@
     <string name="gadget_weather_app_not_installed">Click to install MIUI Weather</string>
     <string name="gadget_weather_time_format">MM/d EEE</string>
     <string name="gadget_weather_time_spliter">:</string>
-    <string name="gadget_weather_theme_type">Gadget type</string>
+    <string name="gadget_weather_theme_type">Gadget Type</string>
     <string name="gadget_weather_download_title">Download</string>
-    <string name="gadget_weather_download_message">Need to download theme package: %1$s. size: %2$s. Please re-pick after download finish</string>
+    <string name="gadget_weather_download_message">Need to download theme package: %1$s. size: %2$s. Please re-choose after download completes</string>
     <string name="gadget_weather_download_start">start</string>
 
-    <string name="upside_apps_title">Select application</string>
+    <string name="upside_apps_title">Select Application</string>
     <string name="upside_edit_bottom_empty_tip">Tap the rect for change</string>
     <string name="upside_edit_bar_empty">Empty</string>
     <string name="upside_edit_bar_select_app">Select app</string>
-    <string name="upside_enter_tip">Slide down with two fingers to switch to free home</string>
-    <string name="upside_exit_tip">Slide up with two fingers to exit free home</string>
-
+    <string name="upside_enter_tip">Slide down with two fingers to switch to Free Launcher</string>
+    <string name="upside_exit_tip">Slide up with two fingers to exit Free Launcher</string>
 </resources>
