--- a/src/packages/apps/Notes/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Notes/res/values-zh-rTW/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">備註</string>
-    <string name="app_widget">備註</string>
-    <string name="widget_havenot_content">沒有關聯內容，點擊新建備註。長按可調整大小。</string>
-    <string name="widget_under_visit_mode">訪客模式下，備註內容不可見</string>
+    <string name="app_name">便條</string>
+    <string name="app_widget">便條</string>
+    <string name="widget_havenot_content">沒有關聯內容，點擊新建便條。長按可調整大小。</string>
+    <string name="widget_under_visit_mode">訪客模式下，便條內容不可見</string>
     <string name="notelist_string_info">...</string>
-    <string name="notelist_menu_new">新建備註</string>
+    <string name="notelist_menu_new">新建便條</string>
     <string name="note_alert_expired">已過期</string>
     <string name="format_date_ymd">yyyyMMdd</string>
     <string name="format_datetime_mdhm">MM月dd日 kk:mm</string>
@@ -18,7 +18,7 @@
     <string name="note_link_other">打開地圖</string>
     <string name="note_link_select">選擇文字</string>
     <!-- note list string -->
-    <string name="menu_create_folder">新建檔案來</string>
+    <string name="menu_create_folder">新建便條夾</string>
     <string name="menu_export_text">匯出文本</string>
     <string name="menu_list_mode">清單圖示</string>
     <string name="menu_grid_mode">網格圖示</string>
@@ -26,7 +26,7 @@
     <string name="menu_setting">設定</string>
     <string name="menu_search">搜索</string>
     <string name="menu_delete">刪除</string>
-    <string name="menu_move">移動到資料夾</string>
+    <string name="menu_move">移動到便條夾</string>
     <string name="menu_select_title">選中了 %d 項</string>
     <string name="menu_select_none">沒有選中項，操作無效</string>
     <string name="menu_select_all">全選</string>
@@ -36,30 +36,30 @@
     <string name="menu_font_normal">正常</string>
     <string name="menu_font_large">大</string>
     <string name="menu_font_super">超大</string>
-    <string name="menu_folder_change_name">修改資料夾名稱</string>
-    <string name="folder_exist">資料夾 %1$s 已存在，請重新命名</string>
+    <string name="menu_folder_change_name">修改便條夾名稱</string>
+    <string name="folder_exist">便條夾 %1$s 已存在，請重新命名</string>
     <string name="menu_share">分享</string>
     <string name="menu_send_to_desktop">傳送到桌面</string>
-    <string name="menu_title_select_folder">選擇資料夾</string>
-    <string name="menu_move_parent_folder">上一級資料夾</string>
+    <string name="menu_title_select_folder">選擇便條夾</string>
+    <string name="menu_move_parent_folder">上一級便條夾</string>
     <string name="info_note_enter_desktop">已增加到桌面</string>
     <string name="alert_title_delete">刪除</string>
-    <string name="alert_message_delete_notes">確認要刪除所選的 %d 條備註嗎?</string>
-    <string name="alert_message_delete_note">確認要刪除該條備註嗎?</string>
-    <string name="alert_message_delete_folder">確認刪除資料夾及所包含的備註嗎？</string>
-    <string name="format_move_notes_to_folder">已將所選 %1$d 條備註移到 %2$s 資料夾</string>
+    <string name="alert_message_delete_notes">確認要刪除所選的 %d 條便條嗎?</string>
+    <string name="alert_message_delete_note">確認要刪除該條便條嗎?</string>
+    <string name="alert_message_delete_folder">確認刪除便條夾及所包含的便條嗎？</string>
+    <string name="format_move_notes_to_folder">已將所選 %1$d 條便條移到 %2$s 便條夾</string>
     <!-- export text -->
     <string name="error_sdcard_unmounted">SD卡被佔用，不能操作</string>
     <string name="error_sdcard_export">匯出文本時發生錯誤，請檢查SD卡</string>
-    <string name="error_note_not_exist">要查看的備註不存在</string>
-    <string name="error_note_empty_for_clock">不能為備註為空備註設定鬧鐘提醒</string>
-    <string name="error_note_empty_for_send_to_desktop">不能將空備註傳送到桌面</string>
-    <string name="error_widget_exist_for_send_to_desktop">備註已經在桌面上了</string>
+    <string name="error_note_not_exist">要查看的便條不存在</string>
+    <string name="error_note_empty_for_clock">不能為空便條設定鬧鐘提醒</string>
+    <string name="error_note_empty_for_send_to_desktop">不能將空便條傳送到桌面</string>
+    <string name="error_widget_exist_for_send_to_desktop">便條已經在桌面上了</string>
     <string name="success_sdcard_export">匯出成功</string>
     <string name="failed_sdcard_export">匯出失敗</string>
     <string name="format_exported_file_location">已將文本檔案(%1$s)輸出至SD卡(%2$s)目錄</string>
     <!-- Sync -->
-    <string name="ticker_syncing">同步備註...</string>
+    <string name="ticker_syncing">同步便條...</string>
     <string name="ticker_success">同步成功</string>
     <string name="ticker_fail">同步失敗</string>
     <string name="ticker_cancel">同步已取消</string>
@@ -68,12 +68,12 @@
     <string name="error_sync_internal">同步失敗，發生內部錯誤</string>
     <string name="error_sync_cancelled">同步已取消</string>
     <string name="sync_progress_login">登入%1$s...</string>
-    <string name="sync_progress_init_list">正在獲取伺服器備註清單...</string>
-    <string name="sync_progress_syncing">正在同步本地備註...</string>
+    <string name="sync_progress_init_list">正在獲取伺服器便條清單...</string>
+    <string name="sync_progress_syncing">正在同步本地便條...</string>
     <!-- Preferences -->
     <string name="preferences_title">設定</string>
     <string name="preferences_account_title">同步帳號</string>
-    <string name="preferences_account_summary">與google task同步備註記錄</string>
+    <string name="preferences_account_summary">與google task同步便條記錄</string>
     <string name="preferences_last_sync_time">上次同步於 %1$s</string>
     <string name="preferences_add_account">增加帳號</string>
     <string name="preferences_menu_change_account">更換帳號</string>
@@ -83,8 +83,8 @@
     <string name="preferences_button_sync_cancel">取消同步</string>
     <string name="preferences_dialog_change_account_title">目前帳號 %1$s</string>
     <string name="preferences_dialog_change_account_warn_msg">如更換同步帳號，過去的帳號同步訊息將被清空，再次切換的同時可能會造成數據重複</string>
-    <string name="preferences_dialog_select_account_title">同步備註</string>
-    <string name="preferences_dialog_select_account_tips">請選擇google帳號，備註將與該帳號的google task內容同步。</string>
+    <string name="preferences_dialog_select_account_title">同步便條</string>
+    <string name="preferences_dialog_select_account_tips">請選擇google帳號，便條將與該帳號的google task內容同步。</string>
     <string name="preferences_toast_cannot_change_account">正在同步中，不能修改同步帳號</string>
     <string name="preferences_toast_success_set_accout">同步帳號已設置為%1$s</string>
     <string name="preferences_bg_random_appear_title">新建便條背景顏色隨機</string>
@@ -100,7 +100,7 @@
 
     <string name="button_new_note">新建便條</string>
     <string name="default_folder_name">便條夾</string>
-    <string name="move_to_parent">移到上層資料夾</string>
+    <string name="move_to_parent">移到上一級便條夾</string>
 
     <string name="attachment_gallery">圖片</string>
     <string name="attachment_camera">拍照</string>
@@ -123,5 +123,5 @@
     <string name="toast_message_replace_image_fail">替換圖片失敗!</string>
 
     <string name="snippet_image_stub">[圖片]</string>
-    <string name="send_to_note">傳送到便簽</string>
+    <string name="send_to_note">傳送到便條</string>
 </resources>
