--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -141,4 +141,6 @@
     <string name="user_agreement_p3">&#160;and the&#160;</string>
     <string name="user_agreement_p4">Privacy Policy</string>
     <string name="user_agreement_p5">By signing up, you are agreeing to\n the&#160;</string>
+    <string name="skip_setup_account_title">Skip account setting</string>
+    <string name="skip_setup_account_msg">Using your Xiaomi Account, you can synchronize and backup your SMS, Contacts, photos, notes, etc. Continue and setup later?</string>
 </resources>
