--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
@@ -141,4 +141,6 @@
     <string name="user_agreement_p3">和</string>
     <string name="user_agreement_p4">隐私条款</string>
     <string name="user_agreement_p5">注册帐户即表示您同意遵守\n小米帐户的</string>
+    <string name="skip_setup_account_title">跳过帐户设置</string>
+    <string name="skip_setup_account_msg">使用小米帐户可以同步备份短信、联系人、照片和便签等各种手机数据。确认要跳过帐户设置吗？</string>
 </resources>
